--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "appcenter-analytics": "5.0.1",
     "appcenter-crashes": "5.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-code-push": "^8.2.1",
+    "react-native-config": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
